Salidas - Crear Salida

--- a/src/app/aaacesa/dialogs/dialog-create-prealertas.component.html
+++ b/src/app/aaacesa/dialogs/dialog-create-prealertas.component.html
@@ -381,7 +381,7 @@
 
                 <hr class="dividerb">
 
-                <div class="row mb-3">                
+                <div class="row mt-5 mb-3">                
                   <div *ngFor="let file of model.Documentos" class="col col-lg-2">
                     <h1 style="font-size: 5rem"><i class="fas {{file.NombreDocumento | fileIconPipe}}"></i></h1>
                     <p style="word-break: break-all;" class="detail-text">{{file.NombreDocumento}}</p>                                                                                               
