--- a/src/app/aaacesa/dialogs/dialog-create-previos.component.html
+++ b/src/app/aaacesa/dialogs/dialog-create-previos.component.html
@@ -242,7 +242,7 @@
                         <div class="row justify-content-end">
                           <div class="col">
                             <!-- <h5 class="detail-text referencia">Referencia: Sin Referencia</h5>  -->
-                            <h5 class="detail-text referencia">Referencia: {{ this.firstFormGroup.get('referenciaCtrl').value }}</h5>                             
+                            <h5 class="detail-text referencia">Referencia: {{ referencia }}</h5>                             
                           </div>                          
                         </div>
                       </div>                        
