Cambios en formularios
cambiso en formularios, estilos, login

--- a/src/app/aaacesa/admin-user/crear-user/crear-user.component.html
+++ b/src/app/aaacesa/admin-user/crear-user/crear-user.component.html
@@ -84,7 +84,7 @@
             </div> -->
             <div class="row mt-3 align-items-center">
               <div class="col text-center">
-                <button type="submit"  class="btn btn-ghost-link btn-pill" (click)="creaUserForm.valid ? guardaUsuario() : validar_campos(creaUserForm._directives)">Enviar</button>
+                <button type="submit"  class="btn btn-ghost-links btn-pill" (click)="creaUserForm.valid ? guardaUsuario() : validar_campos(creaUserForm._directives)">Crear</button>
               </div>
             </div>
           </div>
