--- a/src/app/aaacesa/admin-user/detalle-user/detalle-user.component.html
+++ b/src/app/aaacesa/admin-user/detalle-user/detalle-user.component.html
@@ -103,7 +103,7 @@
     </div>
     <div class="row">
       <div class="col text-right">
-        <button *ngIf="disabled" type="button" class="btn btn-ghost-link btn-pill" (click)="detailUserForm.valid ? actualiza() : validar_campos(detailUserForm._directives)">Actualizar</button>
+        <button *ngIf="disabled" type="button" class="btn btn-ghost-links btn-pill" (click)="detailUserForm.valid ? actualiza() : validar_campos(detailUserForm._directives)">Actualizar</button>
       </div>
     </div>
   </div>
@@ -116,5 +116,5 @@
   </div>
 </mat-dialog-content>
 <mat-dialog-actions>
-  <button mat-dialog-close class="btn btn-ghost-link btn-pill">Cerrar</button>
+  <button mat-dialog-close class="btn btn-ghost-links btn-pill">Cerrar</button>
 </mat-dialog-actions>
