--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -42,11 +42,11 @@ $dropdown-link-active-color:#646880;
 
 
 $theme-colors:(
-    primary: #FB600A,
+    primary: #183964,
     secondary: #4C58A9,
     succes: #0AA010,
     info: #18EDED,
     warning: #E2DA0C,
     danger: #D31E28,
-    link:#183964
+    links:#131529
 );
