--- a/src/app/aaacesa/admin-user/admin-user.component.html
+++ b/src/app/aaacesa/admin-user/admin-user.component.html
@@ -64,7 +64,7 @@
           <!-- Acciones Column -->
           <ng-container matColumnDef="acciones">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Acciones </th>
-            <td mat-cell *matCellDef="let element"> <a class="btn btn-ghost-link btn-pill" (click)="detalleUSer(element.Id)" href="javascript: void(0);"><i class="icon-plus"></i> Detalle</a> </td>
+            <td mat-cell *matCellDef="let element"> <a class="btn btn-ghost-links btn-pill" (click)="detalleUSer(element.Id)" href="javascript: void(0);"><i class="icon-plus"></i> Detalle</a> </td>
           </ng-container>
 
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
