--- a/src/app/views/resetpassword/resetpassword.component.html
+++ b/src/app/views/resetpassword/resetpassword.component.html
@@ -1,57 +1,70 @@
 <div class="app-body">
-    <main class="main d-flex align-items-center">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-8 mx-auto">
-            <div class="card-group">
-              <div class="card p-4">
-                <div class="card-body">
-                  <form #resetPasswForm="ngForm">
-                    <h2>Cambiar contraseña</h2>
-                    <p class="text-muted">Ingresa tu nueva contraseña</p>
-                    <div class="input-group mb-3">
-                      <div class="input-group-prepend">
-                        <span class="input-group-text"><i class="icon-lock"></i></span>
-                      </div>
-                      <input type="password" class="form-control" [(ngModel)]="newPassword" #nPasswordT="ngModel" id="nPasswordT" name="nPasswordT" 
-                      placeholder="Nueva contraseña" autocomplete="Nueva contraseña" required>
+  <main class="main d-flex align-items-center">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8 mx-auto">
+          <div class="card-group">
+            <div class="card p-4">
+              <div class="card-body">
+                <form [formGroup]="form">
+                  <h4>Cambiar contraseña</h4>
+                  <p class="text-muted">Ingresa tu nueva contraseña</p>
+                  <p class="text-muted small">Debe tener entre 8 y 10 caracteres; minimo 1 mayúscula, 1 minúscula, 1 número y 1 caracter especial (@$!%*?&)</p>
+                  <div class="row mt-2">
+                    <div class="col-md-12">
+                      <mat-form-field class="input-full-width">
+                        <mat-label>Nueva contraseña</mat-label>
+                        <input class="text-right" [type]="hide ? 'password' : 'text'" matInput  [(ngModel)]="newPassword" name="passwordUser" id="passwordUser"formControlName="passwordUser" required pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,10}$" >
+                        <mat-icon matPrefix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                        <mat-error *ngIf="form.hasError('required', 'passwordUser')">
+                          El campo Contraseña es <strong>requerido</strong>
+                        </mat-error>
+                      </mat-form-field> 
                     </div>
-                    <div *ngIf="nPasswordT.invalid && (nPasswordT.dirty || nPasswordT.touched)"
-                        class="alert alert-danger">
-                      <div *ngIf="nPasswordT?.errors.required">
-                        Contraseña requerida.
-                      </div>
                   </div>
-                    <div class="row">
-                      <div class="col-6">
-                        <button type="submit"  class="btn btn-primary px-4" (click)="resetPassword($event)" [disabled]="resetPasswForm.invalid" >Cambiar</button>
-                      </div>
-                      <div class="col-6 text-right">
-                        <a href="/login" class="btn btn-link px-0">Regresar</a>
-                      </div>
+                  <div class="row mt-3">
+                    <div class="col-md-12">
+                      <mat-form-field class="input-full-width">
+                        <mat-label>Confirma la contraseña</mat-label>
+                        <input class="text-right" [type]="hide ? 'password' : 'text'" matInput [(ngModel)]="confPasw" formControlName="passwConfirm" name="passwConfirm" id="passwConfirm" [errorStateMatcher]="matcher" required>
+                        <mat-icon matPrefix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                        <mat-error *ngIf="form.hasError('required','passwConfirm')">
+                            El campo Confirmar Contraseña es <strong>requerido</strong>
+                          </mat-error>
+                        <mat-error *ngIf="form.hasError('notSame')">
+                          Las Contraseñas son <strong>diferentes</strong>
+                        </mat-error>
+                      </mat-form-field> 
                     </div>
-                    <div class="row">
-                      <div class="col-12 text-center">
-                          <div *ngIf="validar">
-                             {{message}}
-                          </div>
-                      </div>
+                  </div>
+                  <div class="row mt-3">
+                    <div class="col-6">
+                        <button type="submit"  class="btn btn-ghost-links btn-pill" (click)="form.valid ? resetPassword() : validar_campos(form)"><i class="icon-paper-plane"></i>&nbsp;Enviar</button>
                     </div>
-                  </form>
-                </div>
+                    
+                  </div>
+                  <div class="row">
+                    <div class="col-12 text-center">
+                        <div *ngIf="validar">
+                            {{message}}
+                        </div>
+                    </div>
+                  </div>
+                </form>
               </div>
-              <div class="card text-white bg-primary py-5 d-md-down-none" style="width:44%">
-                <div class="card-body text-center">
-                    <div class="col align-self-center mt-5">
-                      <img src="/assets/img/brand/logo.png" alt="AACESA">
-                      <h2>Bienvenido</h2>
-                    </div>
-                </div>
+            </div>
+            <div class="card text-white bg-primary py-5 d-md-down-none" style="width:44%">
+              <div class="card-body text-center">
+                  <div class="col align-self-center mt-5">
+                    <img src="/assets/img/brand/logo.png" alt="AACESA">
+                    <h2>Bienvenido</h2>
+                  </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </main>
-  </div>
+    </div>
+  </main>
+</div>
   
