--- a/src/app/aaacesa/previos/previos.component.scss
+++ b/src/app/aaacesa/previos/previos.component.scss
@@ -1,152 +1,152 @@
-// ng select
-// .below{
-//     display: block;
-//     width: 100%;
-//     height: calc(1.5em + 0.75rem + 2px);
+// // ng select
+// // .below{
+// //     display: block;
+// //     width: 100%;
+// //     height: calc(1.5em + 0.75rem + 2px);
+// //     font-size: 0.8rem;
+// //     font-weight: 400;
+// //     line-height: 1.5;
+// //     background-color: transparent;
+// //     background-clip: padding-box;
+// //     border: 1px solid #646880;
+// //     border-radius: 15px;
+// //     transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+// // }
+// // .below:focus, :active{
+// //     outline: none !important;
+// // }
+// // .filter input:focus, :active{
+// //     outline: none !important;
+// // }
+// // .filter input{
+// //     background: transparent !important;
+// //     border: none !important;
+// //     color: #212649 !important;
+// // }
+// // .options{
+// //     background: #191c37;
+// //     border-radius: 15px;
+// // }
+
+// table{
+//     font-size:  0.9em;
+// }
+// .table th, .table td {
+//     border-top: 1px solid #646880;
+//     color: #07080f;
+// }
+// .table thead th {
+//     border-bottom: 2px solid #646880;
+//     border-top: none;
+//     color: #212649;
+// }
+// .page-item.active .page-link {
+//     background-color: #ed0e19 !important;
+//     border-color: #ed0e19 !important;
+//     border-radius: 100% !important;
+//     color: #ffffff;
+// }
+// .page-link{
+//     border-radius: 100% !important;
+// }
+
+// .iconfilt{
+//     padding-top: 0%;
+//     padding-left: 5%;
+//     font-size: 1.3em !important;
+//     color: #b8bcd6;
+//     transform: translateY(27%);
+// }
+// .bs-datepicker {
+//     display: flex;
+//     align-items: stretch;
+//     flex-flow: row wrap;
+//     background: #fff;
+//     box-shadow: 0 0 10px 0 #aaa;
+//     position: relative;
+//     z-index: 1;
+// }
+
+// .form-control {
+//     font-size: 0.75em;   
+// }
+
+// .btn-prealerta {
+//     background: transparent;
+//     border-radius: 50px;
+//     margin: 2px 2px;
+//     color: white;
+//     padding: 2px 10px;
+// }
+
+// .btn-circle {
+//     border-radius: 50%;
+//     margin-right: 5px;
+// }
+
+// .u-color-primary {
+//     //TODO change to var $color-primary
+//     color: #FB600A;
+// }
+// .u-border-none {
+//     border: none;
+// }
+
+
+// // Font size fixes
+// .card {
 //     font-size: 0.8rem;
-//     font-weight: 400;
-//     line-height: 1.5;
-//     background-color: transparent;
-//     background-clip: padding-box;
-//     border: 1px solid #646880;
-//     border-radius: 15px;
-//     transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 // }
-// .below:focus, :active{
-//     outline: none !important;
+// .form-control {
+//     font-size: 0.8rem;
 // }
-// .filter input:focus, :active{
-//     outline: none !important;
+// .u-small-text  {
+//     font-size: 0.8rem !important;
 // }
-// .filter input{
-//     background: transparent !important;
-//     border: none !important;
-//     color: #212649 !important;
+// .detail-text {
+//     font-size: 0.8rem !important;
+//     line-height: 1rem;
 // }
-// .options{
+
+
+// // Fix position for swtich input
+// .form-switch {
+//     position: absolute;
+//     right: 0.5rem;
+// }
+
+// .modal { overflow-y: auto !important; }
+
+// /*Select Input */
+// .styled-select {
+//     background: url(http://i62.tinypic.com/15xvbd5.png) no-repeat 96% 0;    
+//     overflow: hidden;    
+
+//     & select {
+//         -webkit-appearance: none;
+//         -moz-appearance: none;
+//         appearance: none;
+//     }
+// }  
+
+// .cardborder{
+//     border: 2px solid #0c0d1a;
+//     border-radius: 0.7em;
+//     box-shadow: 3px 4px 3px #0c0d1a;
+// }
+// .dividerb{
+//     border-top: 1px solid #0c0d1a;
+// }
+
+
+// .linebl{
 //     background: #191c37;
-//     border-radius: 15px;
+//     width: 35%;
+//     height: 5%;
+//     margin-top: 9%;
+//     margin-left: -15%;
 // }
 
-table{
-    font-size:  0.9em;
-}
-.table th, .table td {
-    border-top: 1px solid #646880;
-    color: #07080f;
-}
-.table thead th {
-    border-bottom: 2px solid #646880;
-    border-top: none;
-    color: #212649;
-}
-.page-item.active .page-link {
-    background-color: #ed0e19 !important;
-    border-color: #ed0e19 !important;
-    border-radius: 100% !important;
-    color: #ffffff;
-}
-.page-link{
-    border-radius: 100% !important;
-}
-
-.iconfilt{
-    padding-top: 0%;
-    padding-left: 5%;
-    font-size: 1.3em !important;
-    color: #b8bcd6;
-    transform: translateY(27%);
-}
-.bs-datepicker {
-    display: flex;
-    align-items: stretch;
-    flex-flow: row wrap;
-    background: #fff;
-    box-shadow: 0 0 10px 0 #aaa;
-    position: relative;
-    z-index: 1;
-}
-
-.form-control {
-    font-size: 0.75em;   
-}
-
-.btn-prealerta {
-    background: transparent;
-    border-radius: 50px;
-    margin: 2px 2px;
-    color: white;
-    padding: 2px 10px;
-}
-
-.btn-circle {
-    border-radius: 50%;
-    margin-right: 5px;
-}
-
-.u-color-primary {
-    //TODO change to var $color-primary
-    color: #FB600A;
-}
-.u-border-none {
-    border: none;
-}
-
-
-// Font size fixes
-.card {
-    font-size: 0.8rem;
-}
-.form-control {
-    font-size: 0.8rem;
-}
-.u-small-text  {
-    font-size: 0.8rem !important;
-}
-.detail-text {
-    font-size: 0.8rem !important;
-    line-height: 1rem;
-}
-
-
-// Fix position for swtich input
-.form-switch {
-    position: absolute;
-    right: 0.5rem;
-}
-
-.modal { overflow-y: auto !important; }
-
-/*Select Input */
-.styled-select {
-    background: url(http://i62.tinypic.com/15xvbd5.png) no-repeat 96% 0;    
-    overflow: hidden;    
-
-    & select {
-        -webkit-appearance: none;
-        -moz-appearance: none;
-        appearance: none;
-    }
-}  
-
-.cardborder{
-    border: 2px solid #0c0d1a;
-    border-radius: 0.7em;
-    box-shadow: 3px 4px 3px #0c0d1a;
-}
-.dividerb{
-    border-top: 1px solid #0c0d1a;
-}
-
-
-.linebl{
-    background: #191c37;
-    width: 35%;
-    height: 5%;
-    margin-top: 9%;
-    margin-left: -15%;
-}
-
-.ctrfrsw{
-    margin-top: -0.848%;
-}
+// .ctrfrsw{
+//     margin-top: -0.848%;
+// }
