--- a/src/app/aaacesa/salidas/salidas.component.html
+++ b/src/app/aaacesa/salidas/salidas.component.html
@@ -76,7 +76,14 @@
       </div>      
       <!-- End Busqueda Superior -->
 
+      <!-- <div *ngIf="!dataSource.data?.length" class="row">
+        <div class="col-12 text-center">
+          <h3>No hay resultados para mostrar</h3>                    
+        </div>
+      </div> -->
+
       <!-- Start Data Table -->
+      <!-- <div *ngIf="dataSource.data?.length" class="table-responsive"> -->
       <div class="table-responsive">
           <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">                                   
           
@@ -122,7 +129,7 @@
             <ng-container matColumnDef="Acciones">
               <th mat-header-cell *matHeaderCellDef> Acciones </th>
               <td mat-cell *matCellDef="let element"> 
-                <a class="btn btn-pill btn-ghost-link" (click)="detalleModal.show(); verDetalle(element.IdAdelantoSalidas);" href="javascript: void(0);"><i class="fas fa-plus-circle"></i> Detalle</a>
+                <a class="btn btn-pill btn-ghost-links" (click)="detalleModal.show(); verDetalle(element.IdAdelantoSalidas);" href="javascript: void(0);"><i class="fas fa-plus-circle"></i> Detalle</a>
               </td>
             </ng-container>
 
