cambios en login
cambios en login, resetpasword

--- a/src/app/views/resetpassword/resetpassword.component.html
+++ b/src/app/views/resetpassword/resetpassword.component.html
@@ -1,3 +1,4 @@
+<ngx-loading [show]="loading"></ngx-loading>
 <div class="app-body">
   <main class="main d-flex align-items-center">
     <div class="container">
