--- a/src/app/aaacesa/previos/previos.component.html
+++ b/src/app/aaacesa/previos/previos.component.html
@@ -1,10 +1,11 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" type="text/css">
 <ngx-loading [show]="loading"></ngx-loading>      
 <div class="row justify-content-end">  
-  <div class="col-lg-2">
+  <div class="col-lg-12 text-right">
     <button (click)="openDialog()" class="btn btn-pill btn-ghost-primary"> <i class="fas fa-plus-circle"></i> Crear Previos</button>
   </div>          
 </div>
+
 <div class="animated fadeIn">
   <div class="card">   
 
