--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -29,8 +29,8 @@
                     <div class="col-md-12">
                       <mat-form-field class="input-full-width">
                         <mat-label>Contraseña</mat-label>
-                        <input class="text-right" type="password" matInput  [(ngModel)]="password" #passwordUser="ngModel" id="passwordUser" name="passwordUser" required>
-                        <span matPrefix><i class="icon-lock info"></i> &nbsp;</span>
+                        <input class="text-right" [type]="hide ? 'password' : 'text'" matInput  [(ngModel)]="password" #passwordUser="ngModel" id="passwordUser" name="passwordUser" required>
+                        <mat-icon matPrefix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                         <mat-error *ngIf="passwordUser.dirty || passwordUser.pristine ||passwordUser.hasError('required')">
                           El campo Contraseña es <strong>requerido</strong>
                         </mat-error>
@@ -39,8 +39,7 @@
                   </div>
                   <div class="row mt-2">
                     <div class="col-md-12">
-                      <mat-checkbox color="primary" [(ngModel)]="checked" #checkedU=ngModel id="checkedU" name="checkedU" required></mat-checkbox>&nbsp;
-                      <a href="#" class="link">Acepto Condiciones de uso</a>
+                      <mat-checkbox color="primary" [(ngModel)]="checked" #checkedU=ngModel id="checkedU" name="checkedU" required>&nbsp; Acepto las <a href="http://www.aaacesa.com.mx/" class="link" target="_blank"> Condiciones de uso</a></mat-checkbox>                     
                       <div class="mat-form-field-subscript-wrapper mat-error mt-3" *ngIf="!checked || checkedU.hasError('required')">
                         * Es necesario Aceptar las <strong>condiciones de uso</strong>
                       </div>
@@ -48,7 +47,7 @@
                   </div>
                   <div class="row mt-4">
                     <div class="col-6">
-                      <button type="submit"  class="btn btn-ghost-links btn-pill" (click)="loginForm.valid ? login() : validar_campos(loginForm._directives)"><i class="fas fa-unlock"></i>&nbsp;Entrar</button>
+                      <button type="submit"  class="btn btn-ghost-links btn-pill" (click)="loginForm.valid ? login() : validar_campos(loginForm)"><i class="fas fa-unlock"></i>&nbsp;Entrar</button>
                     </div>
                     <div class="col-6 text-right">
                       <button type="button" class="btn btn-link btn-sm danger" (click)="onRecoveryPassword()" >¿Olvidaste tu contraseña?</button>
@@ -80,7 +79,7 @@
                         <a href="/login" class="btn btn-link btn-small"><i class="icon-action-undo"></i>&nbsp;Regresar</a>
                       </div>
                       <div class="col-6">
-                        <button type="submit"  class="btn btn-ghost-links btn-pill" (click)="resetForm.valid ? resetPassword() : validar_campos(resetForm._directives)"><i class="icon-paper-plane"></i>&nbsp;Enviar</button>
+                        <button type="submit"  class="btn btn-ghost-links btn-pill" (click)="resetForm.valid ? resetPassword() : validar_campos(resetForm)"><i class="icon-paper-plane"></i>&nbsp;Enviar</button>
                       </div>
                     </div>
                     <div class="row">
