--- a/src/app/aaacesa/finanzas/finanzas.component.html
+++ b/src/app/aaacesa/finanzas/finanzas.component.html
@@ -57,7 +57,7 @@
                 </ng-container>
 
                 <!-- Descargar Column -->
-              <ng-container matColumnDef="FechaDeEmision">
+              <ng-container matColumnDef="Descargar">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header> Descargar </th>
                   <td mat-cell *matCellDef="let element"> {{element.Descargar}} </td>
                 </ng-container>
@@ -112,11 +112,11 @@
                 <!-- FechaDeEmision Column -->
               <ng-container matColumnDef="FechaDeEmision">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de emisión </th>
-                  <td mat-cell *matCellDef="let element"> {{element.FechaDeEmision}} </td>
+                  <td mat-cell *matCellDef="let element"> {{element.FechaEmision}} </td>
                 </ng-container>
 
                 <!-- Descargar Column -->
-              <ng-container matColumnDef="FechaDeEmision">
+              <ng-container matColumnDef="Descargar">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header> Descargar </th>
                   <td mat-cell *matCellDef="let element"> {{element.Descargar}} </td>
                 </ng-container>
@@ -172,11 +172,11 @@
                 <!-- FechaDeEmision Column -->
               <ng-container matColumnDef="FechaDeEmision">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de emisión </th>
-                  <td mat-cell *matCellDef="let element"> {{element.FechaDeEmision}} </td>
+                  <td mat-cell *matCellDef="let element"> {{element.FechaEmision}} </td>
                 </ng-container>
 
                 <!-- Descargar Column -->
-              <ng-container matColumnDef="FechaDeEmision">
+              <ng-container matColumnDef="Descargar">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header> Descargar </th>
                   <td mat-cell *matCellDef="let element"> {{element.Descargar}} </td>
                 </ng-container>
@@ -232,11 +232,11 @@
                 <!-- FechaDeEmision Column -->
               <ng-container matColumnDef="FechaDeEmision">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de emisión </th>
-                  <td mat-cell *matCellDef="let element"> {{element.FechaDeEmision}} </td>
+                  <td mat-cell *matCellDef="let element"> {{element.FechaEmision}} </td>
                 </ng-container>
 
                 <!-- Descargar Column -->
-              <ng-container matColumnDef="FechaDeEmision">
+              <ng-container matColumnDef="Descargar">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header> Descargar </th>
                   <td mat-cell *matCellDef="let element"> {{element.Descargar}} </td>
                 </ng-container>
