--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -39,6 +39,10 @@ $dropdown-link-hover-bg:#131529;
 $dropdown-link-active-bg:#131529;
 $dropdown-link-active-color:#646880;
 
+//Footer
+$footer-bg: #183964;
+$footer-color: #FFFF;
+$footer-height: 100px;
 
 
 $theme-colors:(
