--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -89,3 +89,41 @@
     </div><!-- /.container-fluid -->
   </main>
 </div>
+<app-footer>
+  <!-- <span><a href="https://coreui.io/pro/angular/">CoreUI Pro</a> &copy; 2018 creativeLabs.</span>
+  <span class="ml-auto">Powered by <a href="https://coreui.io/pro/angular">CoreUI Pro for Angular</a></span> -->
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+          <div class="row">
+            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 border-right border border-white">
+              <img src="assets/img/brand/logo.png" alt="">
+            </div>
+            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+              <span>AAACESA cuenta con más de 24 años de experiencia ofreciendo servicios de manejo, almacenaje y custodia de mercancías de comercio exterior. Con el paso del tiempo, se ha posicionado como el almacén fiscalizado líder en la aduana del Aeropuerto Internacional de la Ciudad de México</span>
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+          
+          <div class="row">
+            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+              <span>Servicios</span>
+              <span>Importación Aérea
+                Exportación Aérea
+                Cadena de Frío</span>
+            </div>
+            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+              
+            </div>
+          </div>
+          
+        </div>
+        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+          
+        </div>
+      </div>
+    </div>
+  </div>
+</app-footer>
