--- a/src/app/aaacesa/prealertas/prealertas.component.html
+++ b/src/app/aaacesa/prealertas/prealertas.component.html
@@ -34,7 +34,7 @@
 
             <div class="col-lg-3 mb-1">
               <mat-form-field class="input-full-width">
-                <input matInput #drp="bsDaterangepicker" bsDaterangepicker [(ngModel)]="rangoFechaSearch" placeholder="Rango de Fecha">
+                <input matInput type="text" #drp="bsDaterangepicker" bsDaterangepicker [(ngModel)]="rangoFechaSearch" placeholder="Rango de Fecha">
               </mat-form-field>
             </div>
           </div>
@@ -200,18 +200,23 @@
               <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha Arribo </th>
               <td mat-cell *matCellDef="let element"> {{element.FechaArribo.split(' ')[0]}} </td>
             </ng-container>
+
+            <ng-container matColumnDef="Consignatario">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Consignatario </th>
+              <td mat-cell *matCellDef="let element"> {{element.Consignatario}} </td>
+            </ng-container>
                         
-            <ng-container matColumnDef="Estatus">
+            <!-- <ng-container matColumnDef="Estatus">
               <th mat-header-cell *matHeaderCellDef mat-sort-header> Estatus </th>
               <td mat-cell *matCellDef="let element"> 
                 <div class="col status-filter">            
                   <div class="status-filter__circle status-filter__circle--{{element.Estatus | statusPipe }}"></div>
-                  <!-- <div class="status-filter__text">
+                  <div class="status-filter__text">
                     <p> {{ element.Estatus }} </p>
-                  </div> -->
+                  </div>
                 </div>
               </td>
-            </ng-container>
+            </ng-container> -->
                         
             <ng-container matColumnDef="Acciones">
               <th mat-header-cell *matHeaderCellDef> Acciones </th>
