--- a/src/app/aaacesa/salidas/salidas.component.html
+++ b/src/app/aaacesa/salidas/salidas.component.html
@@ -102,20 +102,25 @@
               <td mat-cell *matCellDef="let element">{{element.House}}</td>
             </ng-container>
 
-            <ng-container matColumnDef="RFCFacturar">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header> RFC Facturar </th>
-              <td mat-cell *matCellDef="let element">{{element.RFCFacturar}}</td>
-            </ng-container>
-
             <ng-container matColumnDef="Pedimento">
               <th mat-header-cell *matHeaderCellDef mat-sort-header> Pedimento </th>
               <td mat-cell *matCellDef="let element">{{element.Pedimento}}</td>
             </ng-container>                        
+
+            <ng-container matColumnDef="RFCFacturar">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> RFC Facturar </th>
+              <td mat-cell *matCellDef="let element">{{element.RFCFacturar}}</td>
+            </ng-container>            
             
             <!-- <ng-container matColumnDef="FechaArribo">
               <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha Arribo </th>
               <td mat-cell *matCellDef="let element"> {{element.FechaArribo.split(' ')[0]}} </td>
             </ng-container> -->
+
+            <ng-container matColumnDef="FechaCreacion">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha Creación </th>
+              <td mat-cell *matCellDef="let element">{{element.FechaCreacion.split(' ')[0]}}</td>
+            </ng-container>            
                         
             <ng-container matColumnDef="Estatus">
               <th mat-header-cell *matHeaderCellDef mat-sort-header> Estatus </th>
