--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -92,29 +92,15 @@
 <app-footer>
   <!-- <span><a href="https://coreui.io/pro/angular/">CoreUI Pro</a> &copy; 2018 creativeLabs.</span>
   <span class="ml-auto">Powered by <a href="https://coreui.io/pro/angular">CoreUI Pro for Angular</a></span> -->
-  <div class="container">
+  <div class="container footer-container">
     <div class="col-md-12">
-      <div class="row">
-        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 border-right border-white mt-4 mr-0">
-          <img src="assets/img/brand/logo.png" alt="">
+      <div class="row ">
+        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 border-right border-white mt-1 mb-1 mr-0">
+            <span class="font-weight-light text-muted">AAACESA cuenta con más de 24 años de experiencia ofreciendo servicios de manejo, almacenaje y custodia de mercancías de comercio exterior. Con el paso del tiempo, se ha posicionado como el almacén fiscalizado líder en la aduana del Aeropuerto Internacional de la Ciudad de México</span>
         </div>
         <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-          <span class="font-weight-light text-muted" style="font-size: 0.75rem">AAACESA cuenta con más de 24 años de experiencia ofreciendo servicios de manejo, almacenaje y custodia de mercancías de comercio exterior. Con el paso del tiempo, se ha posicionado como el almacén fiscalizado líder en la aduana del Aeropuerto Internacional de la Ciudad de México</span>
-        </div>
-        <!-- <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-              <span>Servicios</span>
-              <span>Importación Aérea
-                Exportación Aérea
-                Cadena de Frío</span>
-            </div>
-            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-              
-            </div>
-        </div>
-        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
           
-        </div> -->
+        </div>
       </div>
     </div>
   </div>
